# imaris-file

./: .gitignore  README.md  pyproject.toml
examples/: practical_usage.py
src/imaris_file/: __init__.py  core.py
