[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imaris-file"
version = "0.1.0"
description = "A Python package for reading Imaris microscopy files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["microscopy", "imaris", "hdf5", "imaging"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "h5py>=3.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/imaris_file"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=imaris_file"

[tool.black]
line-length = 80
target-version = ["py38"]

[tool.ruff]
line-length = 80
select = ["E", "F", "B", "I"]
